<?xml version="1.0" encoding="utf-8"?>
    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.slideshow.SlideshowFragment" >

    <TextView
        android:id="@+id/textView26"
        android:layout_width="184dp"
        android:layout_height="122dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="24dp"
        android:fontFamily="serif"
        android:text="@string/case_description_turnaboutgoodbyes"
        app:layout_constraintBottom_toTopOf="@+id/textView27"
        app:layout_constraintStart_toEndOf="@+id/imageView12"
        app:layout_constraintTop_toBottomOf="@+id/textView25" />

    <TextView
        android:id="@+id/textView30"
        android:layout_width="186dp"
        android:layout_height="245dp"
        android:layout_marginStart="8dp"
        android:fontFamily="serif"
        android:text="@string/case_description_thestolenturnabout"
        app:layout_constraintStart_toEndOf="@+id/imageView13"
        app:layout_constraintTop_toBottomOf="@+id/textView29" />

    <TextView
        android:id="@+id/textView25"
        android:layout_width="188dp"
        android:layout_height="35dp"
        android:layout_marginStart="8dp"
        android:fontFamily="serif"
        android:text="@string/case_defendant_turnaboutgoodbyes"
        android:textAlignment="textStart"
        app:layout_constraintBottom_toTopOf="@+id/textView26"
        app:layout_constraintStart_toEndOf="@+id/imageView12"
        app:layout_constraintTop_toBottomOf="@+id/textView24" />

    <TextView
        android:id="@+id/textView29"
        android:layout_width="188dp"
        android:layout_height="35dp"
        android:layout_marginStart="8dp"
        android:fontFamily="serif"
        android:text="@string/case_defendant_thestolenturnabout"
        android:textAlignment="textStart"
        app:layout_constraintBottom_toTopOf="@+id/textView30"
        app:layout_constraintStart_toEndOf="@+id/imageView13"
        app:layout_constraintTop_toBottomOf="@+id/textView28" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="361dp"
        android:layout_height="41dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="26dp"
        android:fontFamily="serif"
        android:text="@string/cases_description_headertext"
        app:layout_constraintBottom_toTopOf="@+id/textView15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="187dp"
        android:layout_height="105dp"
        android:layout_marginStart="8dp"
        android:fontFamily="serif"
        android:text="@string/case_title_turnaboutsamurai"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView16"
        app:layout_constraintStart_toEndOf="@+id/imageView8"
        app:layout_constraintTop_toBottomOf="@+id/textView14" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="157dp"
        android:layout_height="219dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="8dp"
        android:src="@drawable/header_samurai"
        app:layout_constraintBottom_toTopOf="@+id/buttonSamurai"
        app:layout_constraintEnd_toStartOf="@+id/textView16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView14" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="112dp"
        android:layout_height="18dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="serif"
        android:text="@string/case_date_turnaboutsamurai"
        android:textAlignment="viewStart"
        app:layout_constraintBottom_toTopOf="@+id/textView17"
        app:layout_constraintStart_toEndOf="@+id/imageView8"
        app:layout_constraintTop_toBottomOf="@+id/textView15" />

    <TextView
        android:id="@+id/textView24"
        android:layout_width="112dp"
        android:layout_height="18dp"
        android:layout_marginStart="8dp"
        android:fontFamily="serif"
        android:text="@string/case_date_turnaboutgoodbyes"
        android:textAlignment="viewStart"
        app:layout_constraintBottom_toTopOf="@+id/textView25"
        app:layout_constraintStart_toEndOf="@+id/imageView12"
        app:layout_constraintTop_toBottomOf="@+id/textView23" />

    <TextView
        android:id="@+id/textView28"
        android:layout_width="112dp"
        android:layout_height="18dp"
        android:layout_marginStart="8dp"
        android:fontFamily="serif"
        android:text="@string/case_date_thestolenturnabout"
        android:textAlignment="viewStart"
        app:layout_constraintBottom_toTopOf="@+id/textView29"
        app:layout_constraintStart_toEndOf="@+id/imageView13"
        app:layout_constraintTop_toBottomOf="@+id/textView27" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="184dp"
        android:layout_height="122dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="serif"
        android:text="@string/case_description_turnaboutsamurai"
        app:layout_constraintBottom_toTopOf="@+id/textView23"
        app:layout_constraintStart_toEndOf="@+id/imageView8"
        app:layout_constraintTop_toBottomOf="@+id/textView17" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="188dp"
        android:layout_height="35dp"
        android:layout_marginStart="8dp"
        android:fontFamily="serif"
        android:text="@string/case_defendant_turnaboutsamurai"
        android:textAlignment="textStart"
        app:layout_constraintBottom_toTopOf="@+id/textView18"
        app:layout_constraintStart_toEndOf="@+id/imageView8"
        app:layout_constraintTop_toBottomOf="@+id/textView16" />

        <Button
            android:id="@+id/buttonSamurai"
            android:layout_width="143dp"
            android:layout_height="61dp"
            android:layout_marginStart="33dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="24dp"
            android:text="@string/case_button_turnaboutsamurai"
            app:layout_constraintBottom_toTopOf="@+id/imageView12"
            app:layout_constraintEnd_toStartOf="@+id/textView18"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView8" />

        <Button
            android:id="@+id/buttonGoodbye"
            android:layout_width="143dp"
            android:layout_height="61dp"
            android:layout_marginStart="33dp"
            android:layout_marginEnd="15dp"
            android:text="@string/case_button_turnaboutgoodbyes"
            app:layout_constraintEnd_toStartOf="@+id/textView26"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView12" />

        <Button
            android:id="@+id/buttonStolen"
            android:layout_width="143dp"
            android:layout_height="61dp"
            android:layout_marginStart="33dp"
            android:layout_marginEnd="15dp"
            android:text="@string/case_button_thestolenturnabout"
            app:layout_constraintEnd_toStartOf="@+id/textView30"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView13" />

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="157dp"
        android:layout_height="219dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:src="@drawable/header_goodbyes"
        app:layout_constraintEnd_toStartOf="@+id/textView25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSamurai" />

    <TextView
        android:id="@+id/textView23"
        android:layout_width="192dp"
        android:layout_height="74dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="serif"
        android:text="@string/case_title_turnaboutgoodbyes"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView24"
        app:layout_constraintStart_toEndOf="@+id/imageView12"
        app:layout_constraintTop_toBottomOf="@+id/textView18" />

    <TextView
        android:id="@+id/textView27"
        android:layout_width="192dp"
        android:layout_height="96dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="serif"
        android:text="@string/case_title_thestolenturnabout"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView28"
        app:layout_constraintStart_toEndOf="@+id/imageView13"
        app:layout_constraintTop_toBottomOf="@+id/textView26" />

    <ImageView
        android:id="@+id/imageView13"
        android:layout_width="157dp"
        android:layout_height="219dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:src="@drawable/header_stolenturnabout"
        app:layout_constraintEnd_toStartOf="@+id/textView30"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonGoodbye" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

